[gd_scene load_steps=7 format=3 uid="uid://djr8tudb1kart"]

[ext_resource type="Script" uid="uid://bsgpyso4lldmc" path="res://Scripts/bone_v.gd" id="1_qkg15"]
[ext_resource type="Texture2D" uid="uid://bvd5emw4mqfox" path="res://Resources/Sprites/Attacks/Bones/BoneV.png" id="2_r4hna"]

[sub_resource type="AtlasTexture" id="AtlasTexture_diw3u"]
atlas = ExtResource("2_r4hna")
region = Rect2(0, 0, 10, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_46aou"]
atlas = ExtResource("2_r4hna")
region = Rect2(0, 8, 10, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwqxj"]
atlas = ExtResource("2_r4hna")
region = Rect2(0, 16, 0, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqr6a"]
size = Vector2(10, 24)

[node name="BoneV" type="Node2D" node_paths=PackedStringArray("Hitbox")]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_qkg15")
Hitbox = NodePath("BoneHitreg")
Damage = 1
Karma = 2

[node name="BoneTop" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_diw3u")
centered = false

[node name="BoneMiddle" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = SubResource("AtlasTexture_46aou")
centered = false

[node name="BoneBottom" type="Sprite2D" parent="."]
position = Vector2(0, 16)
texture = SubResource("AtlasTexture_mwqxj")
centered = false

[node name="BoneHitreg" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoneHitreg"]
position = Vector2(5, 12)
shape = SubResource("RectangleShape2D_qqr6a")

[connection signal="area_shape_entered" from="BoneHitreg" to="." method="_body_entered"]
[connection signal="area_shape_exited" from="BoneHitreg" to="." method="_body_exited"]
